fix uploading options